--- a/Chess App_files/styles.css
+++ b/Chess App_files/styles.css
@@ -44,9 +44,14 @@
 .row{
   display:inline-block;
 position:relative;
-margin-right: 100px
+margin-right: 50px;
+margin-left: 50px
 }
 
+h1{
+  margin-right: 50px;
+  margin-left: 50px
+}
 
 
 .WK{
@@ -96,4 +101,29 @@ margin-right: 100px
 
 .BP{
     background-image: url("assets/black_pawn.png");
+}
+
+
+/* .footer {
+	position: absolute;
+	text-align: center;
+	bottom: 0;
+	width: 100%;
+	height: 60px;
+
+} */
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: yellow;
+  text-align: center;
+  	height: 30px;
+}
+
+p{
+  margin-top: 8px;
+  margin-bottom: 0px;
 }
